# advent_of_code

./: .gitignore  CMakeLists.txt  README.md
2015/: CMakeLists.txt
2015/01/: solution.cpp
2015/02/: solution.cpp
2015/03/: solution.cpp
2015/04/: solution.cpp
2015/05/: solution.cpp
2015/06/: small.txt  solution.cpp
2024/: CMakeLists.txt
2024/src/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  combination_test.cpp  combination_test2.cpp  template.cpp
2025/: CMakeLists.txt  compile.sh  configure.sh  run.sh
2025/src/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp
processing/: CMakeLists.txt  FileReader.cpp  FileReader.hpp  InputParser.cpp  InputParser.hpp
